# StoryMapJS

./: .brackets.json  .gitignore  AGENTS.md  CHANGELOG  CLAUDE.md  DEBUGGING_INTERMITTENT_SAVES.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.huey  QUICKSTART.md  README.DOCKER.md  README.md  README_DOCKER.md  TESTING_STORAGE_ERRORS.md  api.py  bugs  celery.Dockerfile  codekit-config.json  config.codekit  config.json  copybuild_to_cdn.sh  create-tables.sh  deployment.md  docker-compose.ec2.yml  docker-compose.local.yml  docker-compose.yml  dotenv.example  env.sh.example  examples.json  fabfile.py  faq.json  gitissues.md  js-requirements.txt  makebuckets.sh  makecert.sh  makecerts.sh  package.json  pyproject.toml  render.py  (+11 more)
AWS_Hosting/: AWS_Hosting.md
BEST_PRACTICES/: BEST_PRACTICES.md
GITHUB_HOSTING/: GITHUB_HOSTING.md
You’re making changes in a project you don’t have write access to. Submitting a change will write it to a new branch in your fork aladdinarnous/: ar.md
compiled/: index.html  ironmaiden.html  population.html  storymap.html
compiled/css/: storymap.css  storymap.dark.css  storyslider.css
compiled/examples/: authortool_test.html  authortool_test.json  bob-boilen.html  bob-boilen.json  courbet.json  empty.json  flickr-drewvigal.json  flickr-zach.wise.json  flickr_test.html  gameofthrones.json  instagram-chenpamela.json  instagram_brentfoster.json  instagram_couch.json  instagram_joegermuska.json  instagram_matteich.json  instagram_mirandamulligan.json  instagram_raymondmccrea.json  instagram_test.html  instagram_test.json  ironmaiden.html  ironmaiden.json  jansteen.json  katrina.html  katrina.json  marktwain.json  multiple_storymaps.html  nightwatch.json  population-dark.html  population.html  population.json  president.html  president.json  seurat.json  usecase_test_01.html  usecase_test_02.html  usecase_test_03.html  usecase_test_04.html  zoomify.html  zoomify_courbet.html  zoomify_gameofthrones.html  (+3 more)
compiled/fonts/: font.abril-droidsans.css  font.bitter-raleway.css  font.clicker-garamond.css  font.knightlab.css  font.lustria-lato.css  font.medula-lato.css  font.playfair.css  (+3 more)
contrib/: drupal.md
core/: settings.py
deploy/: README  StoryMapJS.service  config.common.yml  config.prd.yml  config.stg.yml  custom_nginx.j2  playbook.build-containers.yml  playbook.create-env.yml  playbook.deploy-repo.yml  playbook.deploy-service.yml  playbook.deploy-web.yml  playbook.deploy.yml  playbook.huey.yml  playbook.repo.yml  playbook.static.yml
fabfile/: __init__.py
localhost/: default.conf
localstack-init/: init-s3.sh
nginx/: Dockerfile
robot_tests/: qunit.robot  resource.robot  storymaps.robot
s3analysis/: s3analysis.py
scripts/: create-tables.sh  makebuckets.sh  makecerts.sh  set-error-injection.sh  test-storage-errors.sh  tools.py
site/: index.html
storymap/: api.py  celeryconf.py  connection.py  examples.json  faq.json  google.py  local_storage.py  localdevplan.md  mock_storage.py  models.py  settings.py  storage.py  tasks.py
tasks/: compile_less.js  stage.js
templates/: _analytics.html  _base.html  _credentials.html  _demo.html  _editor.html  _embed.html  _examples.html  _head.html  _header.html  _help.html  _modals.html  _overview.html  advanced.html  base.html  edit.html  gigapixel.html  index.html  orangeline.html  qunit.html  select.html  seurat.html  userinfo.html
tests/: README.md  flask_test_config.py  integration_tests.py  mock_settings.py  unit_tests.py
website/: about.html  app.py  website.crt  website.key
zoomify/: README.md
(+465 files in other folders)
